--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body, html {
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    background-image: url('doga2.gif');
+    background-image: url('doga.gif');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -275,8 +275,8 @@ body, html {
 
 .inventory-items {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 5px; /* Daha küçük boşluk */
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px; /* Daha küçük boşluk */
     justify-items: center;
 }
 
@@ -292,8 +292,8 @@ body, html {
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.2s, box-shadow 0.2s;
-    width: 70px; /* Daha büyük boyut */
-    height: 70px; /* Daha büyük boyut */
+    width: 80px; /* Daha büyük boyut */
+    height: 80px; /* Daha büyük boyut */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -362,13 +362,13 @@ body, html {
     }
 
     .inventory-item {
-        width: 60px;
-        height: 60px;
+        width: 70px;
+        height: 70px;
     }
 
     .inventory-item img {
-        width: 20px;
-        height: 20px;
+        width: 25px;
+        height: 25px;
     }
 
     .inventory-item span {
@@ -407,13 +407,13 @@ body, html {
     }
 
     .inventory-item {
-        width: 50px;
-        height: 50px;
+        width: 60px;
+        height: 60px;
     }
 
     .inventory-item img {
-        width: 15px;
-        height: 15px;
+        width: 20px;
+        height: 20px;
     }
 
     .inventory-item span {
