--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body, html {
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    background-image: url('doga.gif');
+    background-image: url('doga2.GIF');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
