--- a/styles.css
+++ b/styles.css
@@ -46,36 +46,20 @@ body, html {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    height: auto; /* Header bölümünü dikine kısaltmak için */
 }
 
-.header .top-section, .header .bottom-section {
+.header .bottom-section {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 0;
 }
 
-.player-name {
-    font-size: 1.5em;
-    font-weight: bold;
-    color: white;
-    position: relative;
-    text-align: center;
-}
-
-.player-name .underline {
-    width: 100%;
-    height: 5px;
-    background-color: grey;
-    position: absolute;
-    bottom: -10px;
-    left: 0;
-}
-
 .level-experience {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     width: 100%;
 }
 
@@ -275,10 +259,9 @@ body, html {
 }
 
 .inventory-items {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px; /* Daha küçük boşluk */
-    justify-items: center;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
 }
 
 .inventory-item {
