--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ body, html {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin-bottom: 5%;
+    margin-bottom: 10px; /* Köpek ile butonlar arasındaki uzaklık 10px */
 }
 
 .custom-button {
@@ -192,6 +192,7 @@ body, html {
     width: 100%;
     margin: 10px 0;
     position: relative;
+    margin-bottom: 10px; /* Köpek ile barlar arasındaki uzaklık 10px */
 }
 
 .dog {
@@ -205,7 +206,7 @@ body, html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 5px; /* Margin azaltıldı */
+    margin-top: 10px; /* Köpek ile barlar arasındaki uzaklık 10px */
 }
 
 .energy-bar, .happiness-bar {
@@ -252,13 +253,13 @@ body, html {
 .inventory {
     width: 100%;
     margin-top: 5px; /* Margin azaltıldı */
+    margin-bottom: 10vh; /* Navbar ile arada boşluk */
 }
 
 .inventory-items {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    margin-bottom: 20px; /* Navbar ile arada boşluk */
 }
 
 .inventory-item {
