--- a/styles.css
+++ b/styles.css
@@ -63,13 +63,14 @@ body, html {
     width: 100%;
 }
 
-.level-experience .player-level {
+.player-level {
     font-size: 1.2em;
     font-weight: bold;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-right: 10px;
 }
 
 .level-icon {
@@ -84,8 +85,7 @@ body, html {
     border-radius: 10px;
     position: relative;
     overflow: hidden;
-    margin-left: 10px;
-    width: 25%;
+    width: 60%;
 }
 
 .exp-fill {
