--- a/styles.css
+++ b/styles.css
@@ -443,6 +443,13 @@ body, html {
     transform: scale(1.1);
 }
 
+.auto-bot-timer {
+    color: white;
+    font-weight: bold;
+    font-size: 1em;
+    margin-top: 10px;
+}
+
 @media (max-width: 768px) {
     .custom-button img {
         width: 35px;
